8750
Another example from SI-7762.

{noformat}
 ~/code/scala scala-hash v2.11.0-M4 -nc
[info] v2.11.0-M4 => /Users/jason/usr/scala-v2.11.0-M4-0-g8b41240
Welcome to Scala version 2.11.0-20130710-171554-8b41240f3d (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_37).
Type in expressions to have them evaluated.
Type :help for more information.

scala> "99.4".toD<console>:1: error: unclosed string literal
"99
^
{noformat}
